# T4.1---Network_grid_optimization

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  compose.yaml  index.html  package-lock.json  package.json  pyproject.toml  rollup.config.js  script.js  script.ts  style.css
docker/: compose-dev.yaml  compose.yaml
helm/: values.yaml
helm/templates/: _helpers.tpl  client-cert.yaml  cm.yaml  deployment.yaml  gateway.yaml  ingress.yaml  pvc.yaml  service.yaml
minimal-gui/: compose.yaml  index.html  package-lock.json  package.json  rollup.config.js  script.js  script.ts  style.css
minimal-gui/src/: models.ts  util.ts
processing/: .gitignore  compose.yaml  index.ts  package.json
public/: loader.js  style.css
src/: api-script.py  api.py  api.ts  api_impl.py  api_script.py  cli_script.py  fdb.py  graph.ts  models.py  models.ts  sim.py  workbooks.ts
ui-demo/: compose.yaml  package-lock.json  package.json  rollup.config.js
ui-demo/public/: index.html  loader.js  script.js  sysview.html
ui-demo/src/: api.ts  workbooks.ts
