[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dpsv"
version = "0.1.0"
dependencies = [
    "pandapower",
    "numba",
    "junix",
    "cimpy",
    "pandas",
    "openpyxl",
    "uvicorn",
    "fastapi",
    "python-multipart",
    "requests"
]

[project.scripts]
dps-server = "api_script:main"
dps = "cli_script:main"

[tool.setuptools]
py-modules = ["api_script", "api","cli_script","cli","delegate","fdb","models","sim"]